--- a/home.css
+++ b/home.css
@@ -1,13 +1,9 @@
 body {
-    font-family: Cambria,Cochin, Georgia, Times, 'Times New Roman', serif,Arial,'Raleway', sans-serif;
-    background-color: #ffffff;   
-    color: #333;
+    font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
 }
 
-
- 
 header, nav, section, footer {
     margin: 20px;
     padding: 20px;
@@ -19,49 +15,7 @@ header {
     background-color: #f5f5f5;
 }
 
-nav {
-    display: flex;
-    justify-content: space-around;
-    background-color: #333;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-}
-
-section {
-    margin-top: 20px;
-}
-
-#hero {
-    background-color: #e6e6e6;
-    text-align: center;
-    padding: 50px;
-}
-
-#featured-products {
-    background-color: #f9f9f9;
-}
-
-footer {
-    text-align: center;
-    margin-top: 20px;
-    background-color: #333;
-    color: white;
-    padding: 10px;
-}
- 
- /* ... your existing styles ... */
-
-
-/* Add this CSS for responsive navigation */
-#menu-toggle {
-    display: none;
-    cursor: pointer;
-}
-
-#close-btn {
+#menu-toggle, #close-btn {
     display: none;
     cursor: pointer;
 }
@@ -92,6 +46,29 @@ nav a {
     text-decoration: none;
 }
 
+section {
+    margin-top: 20px;
+}
+
+#hero {
+    background-color: #e6e6e6;
+    text-align: center;
+    padding: 50px;
+}
+
+#featured-products {
+    background-color: #f9f9f9;
+}
+
+footer {
+    text-align: center;
+    margin-top: 20px;
+    background-color: #333;
+    color: white;
+    padding: 10px;
+}
+
+/* Media queries for responsive design */
 @media screen and (max-width: 600px) {
     #menu-toggle {
         display: block;
