--- a/home.css
+++ b/home.css
@@ -114,6 +114,7 @@ nav ul li a {
     position: relative;
     width: 100%;
     max-width: 100%;
+    height: 600px;
     margin: auto;
     overflow: hidden;
     transition: opacity 3s ease-in-out;
